# Lightweight-Local-Assistant

./: GEMINI.md  README.md  install_extension.sh  mcp_server.py  pyproject.toml
lightweight_local_assistant/: __init__.py  agent.py  models.py  security.py  tools.py
test/: test_coverage.py  test_mcp.py  test_mcp_unittest.py  test_plan_updates.py  test_v2_features.py
